[tool.poetry]
name = "get-weather-test"
version = "0.1.0"
description = ""
authors = ["Elise Alstad <lal@ssb.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
dash = "^2.18.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
wbdata = "^1.0.0"
nbformat = "^5.10.4"
dash-bootstrap-components = "^1.6.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
